--- a/view/index.html
+++ b/view/index.html
@@ -24,7 +24,7 @@
   </script>
 </head>
 <body>
-  <div id="main"></div>
+  <div id="main" style="height: 100%;"></div>
   <% if (isDebug) { %>
     <script src="<%= prefix %>/assets/.build/build.js"></script>
   <% } %>
