--- a/view/index.html
+++ b/view/index.html
@@ -2,7 +2,7 @@
 <html lang="<%= G.i18nLang %>">
 <head>
   <meta charset="UTF-8">
-  <title>标签查询</title>
+  <title>demo</title>
   <link rel="icon" id="favicon" href="<%= prefix %>/assets/logo.ico" type="image/x-icon" />
   <link rel="stylesheet" href="<%= prefix %>/assets/app.css">
   <% if (privateCloud) { %>
